--- a/src/main/resources/templates/manager/publish.html
+++ b/src/main/resources/templates/manager/publish.html
@@ -1,10 +1,16 @@
 <th:block th:replace="~{layout :: base(~{::section})}">
     <section>
-        <div class="d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center justify-content-between publish-header mb-3">
             <h1 class="h4 mb-0">Publish Schedule</h1>
-            <div class="btn-group">
-                <a class="btn btn-outline-secondary" th:href="@{/manager/publish(start=${prevStart})}">Prev 2 weeks</a>
-                <a class="btn btn-outline-secondary" th:href="@{/manager/publish(start=${nextStart})}">Next 2 weeks</a>
+            <div class="btn-group publish-nav-group">
+                <a class="btn btn-outline-secondary publish-nav-btn"
+                   th:href="@{/manager/publish(start=${prevStart})}">
+                    Prev 2 weeks
+                </a>
+                <a class="btn btn-outline-secondary publish-nav-btn"
+                   th:href="@{/manager/publish(start=${nextStart})}">
+                    Next 2 weeks
+                </a>
             </div>
         </div>
 
@@ -26,7 +32,7 @@
         <h2 class="h6 mt-4">Week 2 Preview</h2>
         <div th:replace="~{fragments/schedule-table :: scheduleTable(${week2})}"></div>
 
-        <div class="d-flex gap-2 mt-4">
+        <div class="d-flex flex-wrap gap-2 mt-4 publish-actions">
             <!-- Post: allowed whether or not a period currently exists -->
             <form method="post" th:action="@{/manager/publish/post}">
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
